--- a/app/src/main/res/layout/view_witchspells_add_item.xml
+++ b/app/src/main/res/layout/view_witchspells_add_item.xml
@@ -12,9 +12,11 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:onClick="@{() -> model.onWitchspellsClicked(witchspellsBookImage)}">
 
         <ImageView
+            android:id="@+id/witchspells_book_image"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:src="@drawable/witchspells_book_background"
