--- a/app/src/main/res/layout/view_witchspells_path_item.xml
+++ b/app/src/main/res/layout/view_witchspells_path_item.xml
@@ -25,7 +25,7 @@
             android:layout_marginLeft="@dimen/spacing_large"
             android:layout_marginStart="@dimen/spacing_large"
             android:layout_weight="1"
-            android:text="@{model.getLabel(context)}"
+            android:text="@{model.label}"
             android:textColor="@android:color/black"
             android:textSize="@{model.mainPath ? @dimen/textSize_large : @dimen/textSize_medium}"
             android:textStyle="bold"
@@ -36,6 +36,7 @@
             android:layout_width="@dimen/witchspells_icon_main_size"
             android:layout_height="@dimen/witchspells_icon_main_size"
             android:layout_margin="@dimen/spacing_small"
+            app:setVisible="@{model.label != null}"
             android:src="@{model.getBookDrawable(context)}"
             tools:src="@drawable/card_icon_book_chaos" />
 
