--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,7 +13,11 @@
 
     <dimen name="status_bar_height">24dp</dimen>
 
-    <dimen name="witchspells_icon_main_size">30dp</dimen>
+    <dimen name="witchspells_icon_main_container_size">80dp</dimen>
+    <dimen name="witchspells_icon_secondary_container_size">36dp</dimen>
+    <dimen name="witchspells_icon_main_size">60dp</dimen>
     <dimen name="witchspells_icon_secondary_size">20dp</dimen>
     <dimen name="witchbook_margin">60dp</dimen>
+
+    <dimen name="text_input_height">45dp</dimen>
 </resources>
