--- a/app/src/main/res/layout/view_witchspells_spellbook_main.xml
+++ b/app/src/main/res/layout/view_witchspells_spellbook_main.xml
@@ -47,7 +47,7 @@
             android:layout_marginTop="@dimen/spacing_base"
             android:text="@{model.spellbookTitle}"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="18sp"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toTopOf="@id/main_path_icon"
             tools:text="Necromancie" />
@@ -64,10 +64,10 @@
             android:id="@+id/major_path_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_base"
+            android:layout_marginTop="@dimen/spacing_small"
             android:text="@{model.majorPath ? @string/Witchspells_Major_Path : @string/Witchspells_Minor_Path}"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toBottomOf="@id/main_path_title"
@@ -79,7 +79,7 @@
             android:layout_height="wrap_content"
             android:text="@{@string/Witchspells_Opposite_Path_Format(model.oppositePath)}"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="12sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toBottomOf="@id/major_path_description"
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="45dp"
             android:layout_marginStart="45dp"
-            android:visibility="@{model.selectedLevel > 0 ? View.VISIBLE : View.GONE}"
+            android:visibility="@{model.secondaryPathEditVisible ? View.VISIBLE : View.GONE}"
             app:layout_constraintLeft_toLeftOf="@id/main_path_icon"
             app:layout_constraintTop_toBottomOf="@id/main_path_icon"
             app:model="@{model.secondarySpellbookViewModel}" />
