--- a/app/src/main/res/layout/activity_witchspells.xml
+++ b/app/src/main/res/layout/activity_witchspells.xml
@@ -6,4 +6,4 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/witchspells_background"
-    tools:context=".ui.witchspells.WitchspellsActivity"/>
+    tools:context=".ui.witchspells.WitchspellsEditionActivity"/>
