--- a/app/src/main/res/layout/view_witchspells_path_item.xml
+++ b/app/src/main/res/layout/view_witchspells_path_item.xml
@@ -21,7 +21,11 @@
             android:id="@+id/main_path_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/spacing_base"
+            android:paddingLeft="@dimen/spacing_base"
+            android:paddingRight="@dimen/spacing_large"
+            android:paddingStart="@dimen/spacing_base"
+            android:paddingEnd="@dimen/spacing_large"
+            android:paddingBottom="@dimen/spacing_base"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -40,13 +44,33 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/free_access_icon"
+            android:layout_width="@dimen/witchspells_icon_secondary_container_size"
+            android:layout_height="@dimen/witchspells_icon_secondary_container_size"
+            android:layout_marginRight="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_small"
+            android:background="@drawable/spell_circle_small"
+            app:layout_constraintTop_toBottomOf="@+id/secondary_path_description"
+            app:layout_constraintLeft_toLeftOf="@+id/secondary_path_icon">
+
+            <ImageView
+                android:layout_width="@dimen/witchspells_icon_secondary_size"
+                android:layout_height="@dimen/witchspells_icon_secondary_size"
+                android:layout_gravity="center"
+                android:layout_margin="@dimen/spacing_base"
+                android:src="@drawable/card_icon_book_free_access"/>
+        </FrameLayout>
+
+        <FrameLayout
             android:id="@+id/secondary_path_icon"
             android:layout_width="@dimen/witchspells_icon_secondary_container_size"
             android:layout_height="@dimen/witchspells_icon_secondary_container_size"
+            android:layout_marginRight="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_small"
             android:background="@drawable/spell_circle_small"
             app:layout_constraintBottom_toBottomOf="@id/main_path_icon"
             app:layout_constraintRight_toRightOf="@id/main_path_icon"
-            app:setVisible="@{!model.addPathModel &amp;&amp; model.secondaryPathIcon != null}">
+            app:setVisible="@{model.secondaryPathIcon != null}">
 
             <ImageView
                 android:layout_width="@dimen/witchspells_icon_secondary_size"
@@ -61,13 +85,12 @@
             android:id="@+id/main_path_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_base"
+            android:layout_marginTop="@dimen/spacing_small"
             android:text="@{model.mainPathTitle}"
             android:textColor="@android:color/white"
             android:textSize="24sp"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toTopOf="parent"
-            app:setVisible="@{!model.addPathModel}"
             tools:text="Necromancie niv 20" />
 
         <View
@@ -76,25 +99,23 @@
             android:background="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@id/main_path_title"
             app:layout_constraintLeft_toLeftOf="@id/main_path_title"
-            app:layout_constraintRight_toRightOf="@id/main_path_title"
-            app:setVisible="@{!model.addPathModel}" />
+            app:layout_constraintRight_toRightOf="@id/main_path_title"/>
 
         <TextView
-            android:id="@+id/major_path_description"
+            android:id="@+id/secondary_path_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/spacing_base"
             android:text="@{model.secondaryPathTitle}"
             android:textColor="@android:color/white"
             android:textSize="18sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
-            app:layout_constraintTop_toBottomOf="@id/main_path_title"
-            app:setVisible="@{!model.addPathModel}"
+            app:layout_constraintTop_toTopOf="@id/secondary_path_icon"
+            app:layout_constraintBottom_toBottomOf="@id/secondary_path_icon"
             tools:text="Voie secondaire : Chaos" />
 
         <TextView
-            android:id="@+id/opposite_path_description"
+            android:id="@+id/free_access_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/spacing_small"
@@ -103,22 +124,9 @@
             android:textSize="18sp"
             android:textStyle="italic"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
-            app:layout_constraintTop_toBottomOf="@id/major_path_description"
-            app:setVisible="@{!model.addPathModel}"
-            tools:text="+ 4 sorts d'accès libre" />
-
-        <TextView
-            android:id="@+id/add_path_message"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/Witchspells_Choose_Main_Path"
-            android:textColor="@android:color/white"
-            android:textSize="24sp"
-            android:textStyle="italic"
-            app:layout_constraintBottom_toBottomOf="@id/main_path_icon"
-            app:layout_constraintLeft_toRightOf="@id/main_path_icon"
-            app:layout_constraintTop_toTopOf="@id/main_path_icon"
-            app:setVisible="@{model.addPathModel}" />
+            app:layout_constraintTop_toTopOf="@id/free_access_icon"
+            app:layout_constraintBottom_toBottomOf="@id/free_access_icon"
+            tools:text="4 sorts d'accès libre" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
