--- a/app/src/main/res/layout/activity_witchspells_edition.xml
+++ b/app/src/main/res/layout/activity_witchspells_edition.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-
-
+        <import type="android.view.View"/>
         <variable
             name="model"
             type="fr.enlight.anima.animamagiccards.ui.witchspells.viewmodels.WitchspellsEditionViewModel" />
@@ -13,51 +12,50 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@android:color/transparent">
+        android:paddingBottom="@dimen/spacing_xbig"
+        android:background="@drawable/witchspells_book_background">
 
         <android.support.constraint.Guideline
             android:id="@+id/left_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.14" />
+            app:layout_constraintGuide_percent="0.12" />
 
         <android.support.constraint.Guideline
             android:id="@+id/right_guideline"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.88" />
+            app:layout_constraintGuide_percent="0.92" />
 
-        <ImageView
-            android:id="@+id/witchspells_background"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="@dimen/spacing_base"
-            android:layout_marginLeft="@dimen/spacing_base"
-            android:layout_marginRight="@dimen/spacing_base"
-            android:layout_marginStart="@dimen/spacing_base"
-            android:src="@drawable/witchspells_book_background"
+        <Button
+            android:id="@+id/witchspells_modify_button"
+            style="@style/FlatButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/Common_Modify"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/textSize_large"
+            android:onClick="@{() -> model.onModifyClicked()}"
+            setVisible="@{!model.pathGroupViewModels.empty}"
+            app:layout_constraintHorizontal_chainStyle="spread"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintDimensionRatio="H,7:10"
             app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintRight_toLeftOf="@+id/witchspells_validation_button" />
 
         <Button
             android:id="@+id/witchspells_validation_button"
             style="@style/FlatButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/spacing_xlarge"
-            android:text="@string/Witchspells_Validate_Creation"
+            android:text="@string/Common_Validate"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
-            app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
-            app:layout_constraintRight_toRightOf="@id/witchspells_background" />
-
-
+            android:textSize="@dimen/textSize_large"
+            android:onClick="@{() -> model.onValidateClicked()}"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toRightOf="@id/witchspells_modify_button"
+            app:layout_constraintRight_toRightOf="parent" />
 
         <ScrollView
             android:layout_width="0dp"
@@ -66,7 +64,7 @@
             app:layout_constraintBottom_toTopOf="@id/witchspells_validation_button"
             app:layout_constraintLeft_toLeftOf="@id/left_guideline"
             app:layout_constraintRight_toRightOf="@id/right_guideline"
-            app:layout_constraintTop_toTopOf="@id/witchspells_background">
+            app:layout_constraintTop_toTopOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -105,6 +103,7 @@
                     android:id="@+id/witchspells_container_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/spacing_large"
                     android:orientation="vertical"
                     app:viewModels="@{model.pathGroupViewModels}" />
 
@@ -117,10 +116,11 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:model="@{model.addPathViewModel}"
-            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
+            android:visibility="@{model.pathGroupViewModels.size() == 0 ? View.VISIBLE : View.GONE}"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="@id/left_guideline"
             app:layout_constraintRight_toRightOf="@id/right_guideline"
-            app:layout_constraintTop_toTopOf="@id/witchspells_background" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
