--- a/app/src/main/res/layout/fragment_witchspells_secondary_path_chooser.xml
+++ b/app/src/main/res/layout/fragment_witchspells_secondary_path_chooser.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/witchspells_book_background"
         android:gravity="center"
+        android:padding="@dimen/spacing_large"
         android:orientation="vertical">
 
         <TextView
@@ -22,7 +23,6 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="@dimen/spacing_base"
-            android:layout_marginTop="@dimen/spacing_large"
             android:text="@string/Witchspells_Choose_Secondary_Path"
             android:textColor="@android:color/white"
             android:textSize="24sp" />
