--- a/app/src/main/res/layout/view_witchspells_path_item.xml
+++ b/app/src/main/res/layout/view_witchspells_path_item.xml
@@ -15,17 +15,18 @@
         android:layout_height="match_parent"
         android:onClick="@{() -> model.onPathClicked()}"
         tools:background="@drawable/witchspells_book_background"
+        android:paddingBottom="@dimen/spacing_large"
         tools:paddingTop="@dimen/spacing_big">
 
         <FrameLayout
             android:id="@+id/main_path_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/spacing_base"
+            android:paddingEnd="@dimen/spacing_large"
             android:paddingLeft="@dimen/spacing_base"
             android:paddingRight="@dimen/spacing_large"
             android:paddingStart="@dimen/spacing_base"
-            android:paddingEnd="@dimen/spacing_large"
-            android:paddingBottom="@dimen/spacing_base"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -47,26 +48,27 @@
             android:id="@+id/free_access_icon"
             android:layout_width="@dimen/witchspells_icon_secondary_container_size"
             android:layout_height="@dimen/witchspells_icon_secondary_container_size"
-            android:layout_marginRight="@dimen/spacing_small"
             android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_marginRight="@dimen/spacing_small"
             android:background="@drawable/spell_circle_small"
-            app:layout_constraintTop_toBottomOf="@+id/secondary_path_description"
-            app:layout_constraintLeft_toLeftOf="@+id/secondary_path_icon">
+            setVisible="@{model.freeAccessSpellsCount > 0}"
+            app:layout_constraintLeft_toLeftOf="@+id/secondary_path_icon"
+            app:layout_constraintTop_toBottomOf="@+id/secondary_path_description">
 
             <ImageView
                 android:layout_width="@dimen/witchspells_icon_secondary_size"
                 android:layout_height="@dimen/witchspells_icon_secondary_size"
                 android:layout_gravity="center"
                 android:layout_margin="@dimen/spacing_base"
-                android:src="@drawable/card_icon_book_free_access"/>
+                android:src="@drawable/card_icon_book_free_access" />
         </FrameLayout>
 
         <FrameLayout
             android:id="@+id/secondary_path_icon"
             android:layout_width="@dimen/witchspells_icon_secondary_container_size"
             android:layout_height="@dimen/witchspells_icon_secondary_container_size"
-            android:layout_marginRight="@dimen/spacing_small"
             android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_marginRight="@dimen/spacing_small"
             android:background="@drawable/spell_circle_small"
             app:layout_constraintBottom_toBottomOf="@id/main_path_icon"
             app:layout_constraintRight_toRightOf="@id/main_path_icon"
@@ -85,10 +87,12 @@
             android:id="@+id/main_path_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/spacing_base"
+            android:layout_marginStart="@dimen/spacing_base"
             android:layout_marginTop="@dimen/spacing_small"
-            android:text="@{model.mainPathTitle}"
+            android:text="@{@string/Witchspells_Path_Title_And_Level_Format(model.mainPathTitle, model.pathLevel)}"
             android:textColor="@android:color/white"
-            android:textSize="24sp"
+            android:textSize="@dimen/textSize_xlarge"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Necromancie niv 20" />
@@ -99,33 +103,38 @@
             android:background="@android:color/white"
             app:layout_constraintBottom_toBottomOf="@id/main_path_title"
             app:layout_constraintLeft_toLeftOf="@id/main_path_title"
-            app:layout_constraintRight_toRightOf="@id/main_path_title"/>
+            app:layout_constraintRight_toRightOf="@id/main_path_title" />
 
         <TextView
             android:id="@+id/secondary_path_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{model.secondaryPathTitle}"
+            android:layout_marginLeft="@dimen/spacing_base"
+            android:layout_marginStart="@dimen/spacing_base"
+            android:text="@{@string/Witchspells_Secondary_Path_Format(model.secondaryPathTitle)}"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/textSize_medium"
             android:textStyle="italic"
+            app:layout_constraintBottom_toBottomOf="@id/secondary_path_icon"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toTopOf="@id/secondary_path_icon"
-            app:layout_constraintBottom_toBottomOf="@id/secondary_path_icon"
             tools:text="Voie secondaire : Chaos" />
 
         <TextView
             android:id="@+id/free_access_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/spacing_base"
+            android:layout_marginStart="@dimen/spacing_base"
             android:layout_marginTop="@dimen/spacing_small"
             android:text="@{@plurals/Witchspells_Free_Access_Count(model.freeAccessSpellsCount, model.freeAccessSpellsCount)}"
             android:textColor="@android:color/white"
-            android:textSize="18sp"
+            android:textSize="@dimen/textSize_medium"
             android:textStyle="italic"
+            setVisible="@{model.freeAccessSpellsCount > 0}"
+            app:layout_constraintBottom_toBottomOf="@id/free_access_icon"
             app:layout_constraintLeft_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toTopOf="@id/free_access_icon"
-            app:layout_constraintBottom_toBottomOf="@id/free_access_icon"
             tools:text="4 sorts d'accès libre" />
 
     </android.support.constraint.ConstraintLayout>
