--- a/app/src/main/res/layout/view_witchspells_spellbook_secondary.xml
+++ b/app/src/main/res/layout/view_witchspells_spellbook_secondary.xml
@@ -13,21 +13,22 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="@{() -> model.onItemClicked()}"
+        android:paddingTop="@dimen/spacing_base"
+        tools:background="@drawable/witchspells_book_background"
         tools:layout_height="match_parent"
         tools:layout_width="match_parent"
-        android:onClick="@{() -> model.onItemClicked()}"
-        tools:background="@drawable/witchspells_book_background"
         tools:paddingTop="@dimen/spacing_big">
 
         <FrameLayout
             android:id="@+id/secondary_path_icon"
             android:layout_width="@dimen/witchspells_icon_secondary_container_size"
             android:layout_height="@dimen/witchspells_icon_secondary_container_size"
-            android:paddingRight="@dimen/spacing_base"
+            android:background="@drawable/spell_circle_small"
             android:paddingEnd="@dimen/spacing_base"
             android:paddingLeft="@dimen/spacing_base"
+            android:paddingRight="@dimen/spacing_base"
             android:paddingStart="@dimen/spacing_base"
-            android:background="@drawable/spell_circle_small"
             app:layout_constraintRight_toRightOf="@id/main_path_icon"
             app:layout_constraintTop_toBottomOf="@id/main_path_icon">
 
@@ -44,10 +45,10 @@
             android:id="@+id/secondary_path_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{model.secondaryPathTitle}"
-            android:textColor="@android:color/white"
             android:layout_marginLeft="@dimen/spacing_base"
             android:layout_marginStart="@dimen/spacing_base"
+            android:text="@{model.secondaryPathTitle}"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/secondary_path_icon"
             app:layout_constraintLeft_toRightOf="@id/secondary_path_icon"
