--- a/app/src/main/res/layout/view_witchspells_book_item.xml
+++ b/app/src/main/res/layout/view_witchspells_book_item.xml
@@ -12,11 +12,12 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="@dimen/home_book_height">
 
         <ImageView
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:id="@+id/witchspells_background"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/home_book_height"
             android:src="@drawable/witchspells_book_background"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="H,7:10"
@@ -29,27 +30,32 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
+            app:layout_constraintRight_toRightOf="@id/witchspells_background"
             app:customFont="@{@string/spell_title_font}"
             android:gravity="center"
             android:ellipsize="end"
             android:maxLines="1"
-            android:textSize="32sp"
+            android:textSize="@dimen/textSize_big"
             android:paddingTop="@dimen/spacing_large"
             android:paddingBottom="@dimen/spacing_large"
             android:textColor="@android:color/white"
-            android:text="@{model.witchName}"
+            android:text="@{@string/Witchspells_Name_Format(model.witchName)}"
             tools:text="Sorts de Célia"/>
 
-        <LinearLayout
+        <android.support.v7.widget.RecyclerView
             android:id="@+id/witchspells_container_layout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:orientation="vertical"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
+            android:paddingLeft="@dimen/spacing_xlarge"
+            android:paddingRight="@dimen/spacing_xlarge"
+            android:paddingStart="@dimen/spacing_xlarge"
+            android:paddingEnd="@dimen/spacing_xlarge"
+            app:layout_constraintLeft_toLeftOf="@id/witchspells_background"
+            app:layout_constraintRight_toRightOf="@id/witchspells_background"
             app:layout_constraintTop_toBottomOf="@+id/witchspells_name"
+            app:layout_constraintBottom_toBottomOf="@id/witchspells_background"
+            app:layoutManager="@{model.layoutManager}"
             app:viewModels="@{model.viewModels}"/>
 
     </android.support.constraint.ConstraintLayout>
